--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ serde_json = '1.0'
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen = '0.2.91'
 wasm-bindgen-futures = '0.4'
+
+[dependencies.web-sys]
+version = '0.3'
+features = [
+    'Window',
+]
+
